--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="{{ asset('css/login.css') }}">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src="scripts/login.js" type="text/javascript"></script>
+<script src="{{ asset('js/login.js') }}" type="text/javascript"></script>
 	
 <div class="container">
         <div class="row">
@@ -71,16 +71,16 @@
 								</form>
 								<form id="register-form" action="#" method="post" role="form" style="display: none;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="user[username]" id="user_username" required="required" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+										<input type="email" name="user[email]" id="user_email" required="required" tabindex="1" class="form-control" placeholder="Email Address" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="user[plainPassword][first]" id="user_plainPassword_first" required="required" tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="password" name="user[plainPassword][second]" id="user_plainPassword_second" required="required" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
 									<div class="form-group">
 										<div class="row">
@@ -89,6 +89,7 @@
 											</div>
 										</div>
 									</div>
+									{{ form_row(form._token) }}
 								</form>
 							</div>
 						</div>
