--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -8,11 +8,11 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="css/tree_view.css">
+	<link rel="stylesheet" href="{{ asset('css/tree_view.css') }}">
 
-	<link rel="stylesheet" href="css/items_list.css">
+	<link rel="stylesheet" href="{{ asset('css/items_list.css') }}">
 
-	<link rel="stylesheet" href="css/navbar.css">
+	<link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src="scripts/tree_view.js" type="text/javascript"></script>
+<script src="{{ asset('js/tree_view.js') }}" type="text/javascript"></script>
 
 
 <nav class="navbar navbar-default" role="navigation">
