--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -1,106 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="{{ asset('css/login.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
 </head>
 <body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
-<script src="{{ asset('js/login.js') }}" type="text/javascript"></script>
-	
+
 <div class="container">
-        <div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-login">
-					<div class="panel-heading">
-						<div class="row">
-							<div class="col-xs-6">
-								<a href="#" class="active" id="login-form-link">Login</a>
-							</div>
-							<div class="col-xs-6">
-								<a href="#" id="register-form-link">Register</a>
-							</div>
-						</div>
-						<hr>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-12">
-								<form id="login-form" action="{{ path('login') }}" method="post" role="form" style="display: block;">
-									<div class="form-group">
-										<input type="text" name="_username" id="username" tabindex="1" class="form-control" placeholder="Username" value="{{ last_username }}">
-									</div>
-									<div class="form-group">
-										<input type="password" name="_password" id="password" tabindex="2" class="form-control" placeholder="Password">
-									</div>
-                                    {% if error %}
-										<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                    {% endif %}
-									<input type="hidden" name="_target_path" value="main" />
-									<input type="hidden" name="_failure_path" value="login" />
-									<div class="form-group text-center">
-										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Remember Me</label>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-lg-12">
-												<div class="text-center">
-													<a href="#" tabindex="5" class="forgot-password">Forgot Password?</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</form>
-								<form id="register-form" action="#" method="post" role="form" style="display: none;">
-									<div class="form-group">
-										<input type="text" name="user[username]" id="user_username" required="required" tabindex="1" class="form-control" placeholder="Username" value="">
-									</div>
-									<div class="form-group">
-										<input type="email" name="user[email]" id="user_email" required="required" tabindex="1" class="form-control" placeholder="Email Address" value="">
-									</div>
-									<div class="form-group">
-										<input type="password" name="user[plainPassword][first]" id="user_plainPassword_first" required="required" tabindex="2" class="form-control" placeholder="Password">
-									</div>
-									<div class="form-group">
-										<input type="password" name="user[plainPassword][second]" id="user_plainPassword_second" required="required" tabindex="2" class="form-control" placeholder="Confirm Password">
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
-											</div>
-										</div>
-									</div>
-									{{ form_row(form._token) }}
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
-
+    <div class="row">
+        <div class="col-sm-offset-4 col-sm-4 col-xs-12">
+            <div class="form-login">
+                <h4>Welcome back.</h4>
+                <form id="login-form" action="{{ path('login') }}" method="post" role="form">
+                <input type="text" name="_username" id="username" tabindex="1" class="form-control input-sm chat-input" placeholder="Username" value="{{ last_username }}">
+                </br>
+                <input type="password" name="_password" id="password" tabindex="2" class="form-control input-sm chat-input" placeholder="Password">
+                </br>
+                <div class="wrapper">
+	            <span class="group-btn">
+                    <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="btn btn-primary btn-md" value="Log In">
+	            </span>
+                </div>
+                <p></p>
+                <div class="wrapper">
+                    <a href="#">Forgot password?</a> or <a href="{{ path('registration') }}">Not registered?</a>
+                </div>
+                    <input type="hidden" name="_target_path" value="main" />
+                    <input type="hidden" name="_failure_path" value="login" />
+                </form>
+                {% if error %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error.messageKey|trans(error.messageData, 'security') }}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
