--- a/app/Resources/views/product.html.twig
+++ b/app/Resources/views/product.html.twig
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
 
-	<link rel="stylesheet" href="{{ asset('css/tree_view.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/tree_view.css') }}">
 
-	<link rel="stylesheet" href="{{ asset('css/items_list.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/items_list.css') }}">
 
-	<link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src="../../../web/js/tree_view.js" type="text/javascript"></script>
+<script src="{{ asset('js/tree_view.js') }}" type="text/javascript"></script>
 
 
 <nav class="navbar navbar-default" role="navigation">
@@ -163,7 +163,6 @@
                     <div id="collapse4" class="panel-collapse collapse">
                         <div class="panel-body">
                             <table class="table">
-                                <tr>
                                     <td>
                                         <a href="#">Link</a>
                                     </td>
@@ -190,167 +189,116 @@
             </div>
         </div>
 
-			<div class="col-sm-10">
+        <div class="col-sm-10">
+            
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1>Item name</h1>
 
-				        <div class="container-fuid">
-						    <div class="row">
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div> 
-						    </div>
-						    <div class="row">
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        
-						    </div>
-						</div>
-					</div>
-	
-		</div>
+                        <div class="container-fluid well">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <div class="card">
+                                        <a class="img-card" href="http://www.fostrap.com/">
+                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
+                                        </a>
+                                    </div>
+                                </div>
+                                
+                                <div class="col-xs-6">
+                                    <h4>Description</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, at, iste molestias tenetur ipsa quasi itaque nulla architecto quidem quod culpa repellat minus ex odit atque labore dolor accusamus nam?lorem</p>
+                                </div>
+                            </div>
 
-	</div>
+                        </div>
+                        
+
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-xs-12"><h1>Often buy with it:</h1>
+                                <div class="col-xs-4">
+                                    <div class="card">
+                                        <a class="img-card" href="http://www.fostrap.com/">
+                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
+                                        </a>
+                                        <br />
+                                        <div class="card-content">
+                                            <h4 class="card-title">
+                                                <a href="http://www.fostrap.com/">
+                                                    BMW X5 SERIES
+                                                </a>
+                                            </h4>
+                                            <div class="">
+                                                New Delhi, 2005, Petrol
+                                            </div>
+                                        </div>
+                                        <div class="card-read-more">
+                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
+                                                BID NOW
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4">
+                                    <div class="card">
+                                        <a class="img-card" href="http://www.fostrap.com/">
+                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
+                                        </a>
+                                        <br />
+                                        <div class="card-content">
+                                            <h4 class="card-title">
+                                                <a href="http://www.fostrap.com/">
+                                                    BMW X5 SERIES
+                                                </a>
+                                            </h4>
+                                            <div class="">
+                                                New Delhi, 2005, Petrol
+                                            </div>
+                                        </div>
+                                        <div class="card-read-more">
+                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
+                                                BID NOW
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4">
+                                    <div class="card">
+                                        <a class="img-card" href="http://www.fostrap.com/">
+                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
+                                        </a>
+                                        <br />
+                                        <div class="card-content">
+                                            <h4 class="card-title">
+                                                <a href="http://www.fostrap.com/">
+                                                    BMW X5 SERIES
+                                                </a>
+                                            </h4>
+                                            <div class="">
+                                                New Delhi, 2005, Petrol
+                                            </div>
+                                        </div>
+                                        <div class="card-read-more">
+                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
+                                                BID NOW
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div> 
+            </div>
+            </div>
+
+        </div>
 
 
+
+
+
+
+
+    </div> <!-- row -->
 </div>
-
-
-
-
-
-
-
-</body>
-</html>
