--- a/web/css/items_list.css
+++ b/web/css/items_list.css
@@ -1,5 +1,5 @@
 .row{
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 .card {
@@ -16,7 +16,7 @@
 }
 .img-card {
   width: 100%;
-  height:200px;
+  height:auto;
   border-top-left-radius:2px;
   border-top-right-radius:2px;
   display:block;
@@ -24,7 +24,7 @@
 }
 .img-card img{
   width: 100%;
-  height: 200px;
+  height: auto;
   object-fit:cover;
   transition: all .25s ease;
 }
