--- a/app/Resources/views/registration.html.twig
+++ b/app/Resources/views/registration.html.twig
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-offset-4 col-sm-4 col-xs-12">
-            <form id="register-form" action="#" method="post" role="form">
+            <form id="register-form" action="{{ path('registration') }}" method="post" role="form">
                 <div class="form-login">
                     <h4>Registration</h4>
                     <input type="text" name="user[username]" id="user_username" required="required" tabindex="1"
@@ -49,11 +49,16 @@
                     </div>
                     <p></p>
                     <div class="wrapper">
-                        <a href="login.html.twig">Already registered?</a>
+                        <a href="{{ path('login') }}">Already registered?</a>
                     </div>
                 </div>
                 {{ form_row(form._token) }}
             </form>
+            {% if error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error.messageKey|trans(error.messageData, 'security') }}
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
