--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -23,7 +23,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src="../../../web/js/tree_view.js" type="text/javascript"></script>
+<script src="{{ asset('js/tree_view.js') }}" type="text/javascript"></script>
 
 
 <nav class="navbar navbar-default" role="navigation">
