--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -41,7 +41,7 @@
                     </div>
                     <p></p>
                     <div class="wrapper">
-                        <a href="#">Forgot password?</a> or <a href="{{ path('registration') }}">Not registered?</a>
+                        <a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a> or <a href="{{ path('registration') }}">Not registered?</a>
                     </div>
                     <input type="hidden" name="_target_path" value="main"/>
                     <input type="hidden" name="_failure_path" value="login"/>
