--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -1,356 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="{{ asset('css/tree_view.css') }}">
-
-	<link rel="stylesheet" href="{{ asset('css/items_list.css') }}">
-
-	<link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
-
+    <link rel="stylesheet" href="{{ asset('css/mainstyle.css') }}">
 </head>
 <body>
-	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
-<script src="{{ asset('js/tree_view.js') }}" type="text/javascript"></script>
-
-
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-        <ul class="nav navbar-nav navbar-left">
-
-		<a class="navbar-brand" href="#">Brand</a>
-
-        </ul>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        
-      <ul class="nav navbar-nav navbar-right">
-         <li><a href="{{ path('logout') }}">Logout</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<script>
+    $('#myCarousel').carousel({
+        pause: 'none'
+    })
+</script>
 
 
-
-<div class="content">
-	
-	<div class="container-fluid">
-
-		<div class="row">
-
-			<div class="col-sm-2">
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#collapse1.1">Link<span class="caret"></span></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse4" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div id="background-carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="item active" style="background-image:url(https://pp.userapi.com/c638219/v638219722/2564b/G1J4B6aNeE8.jpg)"></div>
+            <div class="item" style="background-image:url(http://xn--80ahnglh2dt0az.xn--p1ai/wp-content/uploads/photo-gallery/2016_12_02_%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D0%B0%D1%8F_%D1%81%D1%80%D0%B5%D0%B4%D0%B0/025._%D0%A3%D0%BD%D0%B8%D1%82%D0%B0%D0%B7_+%D0%BF%D0%BE%D1%80%D1%83%D1%87%D0%BD%D0%B8.JPG)"></div>
+            <div class="item" style="background-image:url(http://otdelka-v-novosibirske.ru/images/potfolio_2_02.jpg)"></div>
         </div>
-
-			<div class="col-sm-10">
-
-				        <div class="container-fuid">
-						    <div class="row">
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div> 
-						    </div>
-						    <div class="row">
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="col-xs-12 col-sm-4">
-						            <div class="card">
-						                <a class="img-card" href="http://www.fostrap.com/">
-						                    <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-						                </a>
-						                <br />
-						                <div class="card-content">
-						                    <h4 class="card-title">
-						                        <a href="http://www.fostrap.com/">
-						                            BMW X5 SERIES
-						                        </a>
-						                    </h4>
-						                    <div class="">
-						                        New Delhi, 2005, Petrol
-						                    </div>
-						                </div>
-						                <div class="card-read-more">
-						                    <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-						                        BID NOW
-						                    </a>
-						                </div>
-						            </div>
-						        </div>
-						        
-						    </div>
-						</div>
-					</div>
-	
-		</div>
-
-	</div>
-
-
+    </div>
 </div>
 
 
-
-
-
-
+<div id="content-wrapper">
+    <!-- PAGE CONTENT -->
+    <div class="container">
+        <div class="page-header well"><p class="title">Welcome page</p></div>
+        <div class="well"><p>It's welcome page to continue use this service you need too <a href="{{ path('login') }}">Login</a> or <a
+                        href="{{ path('registration') }}">Registration</a>.</p>
+        </div><!-- End Well -->
+    </div><!-- End Container -->
+    <!-- PAGE CONTENT -->
+</div>
 
 </body>
 </html>
