--- a/app/Resources/views/product.html.twig
+++ b/app/Resources/views/product.html.twig
@@ -1,304 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+{% include "header.html.twig" %}
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<div class="content well">
 
-
-    <link rel="stylesheet" href="{{ asset('css/tree_view.css') }}">
-
-    <link rel="stylesheet" href="{{ asset('css/items_list.css') }}">
-
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
-
-</head>
-<body>
-	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script src="{{ asset('js/tree_view.js') }}" type="text/javascript"></script>
-
-
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-        <ul class="nav navbar-nav navbar-left">
-
-		<a class="navbar-brand" href="#">Brand</a>
-
-        </ul>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        
-      <ul class="nav navbar-nav navbar-right">
-         <li><a href="{{ path('logout') }}">Logout</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-
-
-<div class="content">
-	
-	<div class="container-fluid">
-
-		<div class="row">
-
-			<div class="col-sm-2">
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#collapse1.1">Link<span class="caret"></span></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Main link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse4" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table class="table">
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="#">Link</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="category-tree">
+                    {{ categories | raw }}
                 </div>
             </div>
-        </div>
+            <div class="col-sm-10">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="item-name">{{ item.name }}</h2>
 
-        <div class="col-sm-10">
-            
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h1>Item name</h1>
-
-                        <div class="container-fluid well">
-                            <div class="row">
-                                <div class="col-xs-6">
-                                    <div class="card">
-                                        <a class="img-card" href="http://www.fostrap.com/">
-                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-                                        </a>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <div class="card">
+                                            <img style="height: auto" class="img-card"
+                                                 src="{{ item.image }}"/>
+                                        </div>
                                     </div>
-                                </div>
-                                
-                                <div class="col-xs-6">
-                                    <h4>Description</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, at, iste molestias tenetur ipsa quasi itaque nulla architecto quidem quod culpa repellat minus ex odit atque labore dolor accusamus nam?lorem</p>
+                                    <div class="col-xs-6">
+                                        <h3>Description</h3>
+                                        <p>{{ item.description }}</p>
+                                    </div>
                                 </div>
                             </div>
-
                         </div>
-                        
-
                     </div>
-
                 </div>
-                <div class="row">
-                    <div class="col-xs-12"><h1>Often buy with it:</h1>
-                                <div class="col-xs-4">
-                                    <div class="card">
-                                        <a class="img-card" href="http://www.fostrap.com/">
-                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-                                        </a>
-                                        <br />
-                                        <div class="card-content">
-                                            <h4 class="card-title">
-                                                <a href="http://www.fostrap.com/">
-                                                    BMW X5 SERIES
-                                                </a>
-                                            </h4>
-                                            <div class="">
-                                                New Delhi, 2005, Petrol
-                                            </div>
-                                        </div>
-                                        <div class="card-read-more">
-                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-                                                BID NOW
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-4">
-                                    <div class="card">
-                                        <a class="img-card" href="http://www.fostrap.com/">
-                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-                                        </a>
-                                        <br />
-                                        <div class="card-content">
-                                            <h4 class="card-title">
-                                                <a href="http://www.fostrap.com/">
-                                                    BMW X5 SERIES
-                                                </a>
-                                            </h4>
-                                            <div class="">
-                                                New Delhi, 2005, Petrol
-                                            </div>
-                                        </div>
-                                        <div class="card-read-more">
-                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-                                                BID NOW
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-4">
-                                    <div class="card">
-                                        <a class="img-card" href="http://www.fostrap.com/">
-                                            <img src="https://images.pexels.com/photos/170811/pexels-photo-170811.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/>
-                                        </a>
-                                        <br />
-                                        <div class="card-content">
-                                            <h4 class="card-title">
-                                                <a href="http://www.fostrap.com/">
-                                                    BMW X5 SERIES
-                                                </a>
-                                            </h4>
-                                            <div class="">
-                                                New Delhi, 2005, Petrol
-                                            </div>
-                                        </div>
-                                        <div class="card-read-more">
-                                            <a class="btn btn-link btn-block" href="http://www.fostrap.com/">
-                                                BID NOW
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div> 
-            </div>
-            </div>
-
+            </div> <!-- row -->
         </div>
-
-
-
-
-
-
-
-    </div> <!-- row -->
+    </div>
 </div>
+
+{% include "footer.html.twig" %}
