--- a/web/css/items_list.css
+++ b/web/css/items_list.css
@@ -1,5 +1,5 @@
 .row{
-    padding-top: 5px;
+    padding-top: 0px;
 }
 
 .card {
@@ -17,14 +17,16 @@
 .img-card {
   width: 100%;
   height:auto;
+  max-height: 70vh;
   border-top-left-radius:2px;
   border-top-right-radius:2px;
   display:block;
     overflow: hidden;
 }
 .img-card img{
+
   width: 100%;
-  height: auto;
+  height: 175px;
   object-fit:cover;
   transition: all .25s ease;
 }
@@ -49,4 +51,13 @@
   padding:10px;
   font-weight:600;
   text-transform: uppercase
+}
+
+.item-name{
+  margin-left: 14px;
+  margin-top: 10px;
+}
+
+.content{
+  min-height: 87vh;
 }
