--- a/web/css/tree_view.css
+++ b/web/css/tree_view.css
@@ -1,87 +1,25 @@
-div.panel:first-child {
-    margin-top:20px;
+.category-tree{
+    margin-top: 20px;
 }
 
-div.treeview {
-    min-width: 100px;
-    min-height: 100px;
-    
-    max-height: 256px;
-    overflow:auto;
-	
-	padding: 4px;
-	
-	margin-bottom: 20px;
-	
-	color: #369;
-	
-	border: solid 1px;
-	border-radius: 4px;
-}
-div.treeview ul:first-child:before {
-    display: none;
-}
-.treeview, .treeview ul {
-    margin:0;
-    padding:0;
-    list-style:none;
-    
-	color: #369;
-}
-.treeview ul {
-    margin-left:1em;
-    position:relative
-}
-.treeview ul ul {
-    margin-left:.5em
-}
-.treeview ul:before {
-    content:"";
-    display:block;
-    width:0;
-    position:absolute;
-    top:0;
-    left:0;
-    border-left:1px solid;
-    
-    /* creates a more theme-ready standard for the bootstrap themes */
-    bottom:15px;
-}
-.treeview li {
-    margin:0;
-    padding:0 1em;
-    line-height:2em;
-    font-weight:700;
-    position:relative
-}
-.treeview ul li:before {
-    content:"";
-    display:block;
-    width:10px;
-    height:0;
-    border-top:1px solid;
-    margin-top:-1px;
-    position:absolute;
-    top:1em;
-    left:0
-}
-.tree-indicator {
-    margin-right:5px;
-    
-    cursor:pointer;
-}
-.treeview li a {
+.category-tree a {
+    color: #ffeef3;
+    padding: 5px 10px;
     text-decoration: none;
-    color:inherit;
-    
-    cursor:pointer;
+    font-weight: bold;
+    display: inline-block;
+    width: 100px;
+    border-radius: 20px 5px;
+    background-color: #6ab7ff;
 }
-.treeview li button, .treeview li button:active, .treeview li button:focus {
-    text-decoration: none;
-    color:inherit;
-    border:none;
-    background:transparent;
-    margin:0px 0px 0px 0px;
-    padding:0px 0px 0px 0px;
-    outline: 0;
+.category-tree a:hover {
+    border-radius: 20px 5px;
+    background-color: #1800ff;
 }
+
+.category-tree ul, .category-tree li{
+    margin-top: 3px;
+    padding: 0 0 0 7px;
+    list-style-type: none;
+}
+
