admin viev edit

--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -1,9 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>User control grid (admins only)</title>
+{% include "header.html.twig" %}
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/ui.jqgrid.css') }}"/>
@@ -12,8 +7,6 @@
     <script src="{{ asset('js/i18n/grid.locale-en.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/jquery.jqGrid.js') }}" type="text/javascript"></script>
 
-</head>
-<body>
 <table id="grid"></table>
 <div id="pager"></div>
 <script type="text/javascript">
