--- a/app/Resources/views/addCategory.html.twig
+++ b/app/Resources/views/addCategory.html.twig
@@ -1,28 +1,9 @@
 {% include "header.html.twig" %}
 
-<div class="container-fluid">
-    <div class="row jumbotron">
-        <form action="" class="form-horizontal">
-            <legend>Create a new category.</legend>
-            <div class="col-xs-12 col-sm-5">
-                <div class="form-group">
-
-                    <label for="categoryName">Category name</label>
-                    <input id="categoryName" type="text" class="form-control" placeholder="Type name here">
-
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-offset-2 col-sm-5">
-                <div class="form-group">
-                    <label for="categoryParent">Category parent</label>
-                    <input id="categoryParent" type="text" class="form-control" placeholder="Type id here">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-default btn-lg btn-block">Create category</button>
-        </form>
-    </div>
-</div>
-
+{{ form_start(form) }}
+{{ form_widget(form,{ 'attr': {'class': 'form-horizontal'} }) }}
+{{ form_end(form) }}
 
 {% include "footer.html.twig" %}
+
 
