--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -35,9 +35,9 @@
 <div id="background-carousel">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="item active" style="background-image:url(https://pp.userapi.com/c638219/v638219722/2564b/G1J4B6aNeE8.jpg)"></div>
-            <div class="item" style="background-image:url(http://xn--80ahnglh2dt0az.xn--p1ai/wp-content/uploads/photo-gallery/2016_12_02_%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D0%B0%D1%8F_%D1%81%D1%80%D0%B5%D0%B4%D0%B0/025._%D0%A3%D0%BD%D0%B8%D1%82%D0%B0%D0%B7_+%D0%BF%D0%BE%D1%80%D1%83%D1%87%D0%BD%D0%B8.JPG)"></div>
-            <div class="item" style="background-image:url(http://otdelka-v-novosibirske.ru/images/potfolio_2_02.jpg)"></div>
+            <div class="item active" style="background-image:url({{ image1 }})"></div>
+            <div class="item" style="background-image:url({{ image2 }})"></div>
+            <div class="item" style="background-image:url({{ image3 }})"></div>
         </div>
     </div>
 </div>
