--- a/web/css/tree_view.css
+++ b/web/css/tree_view.css
@@ -3,7 +3,7 @@
 }
 
 .category-tree a {
-    color: #ffeef3;
+    color: #EEEEEE;
     padding: 5px 10px;
     text-decoration: none;
     font-weight: bold;
