--- a/app/Resources/views/addCategory.html.twig
+++ b/app/Resources/views/addCategory.html.twig
@@ -1,9 +1,9 @@
 {% include "header.html.twig" %}
 
 {{ form_start(form) }}
-{{ form_widget(form,{ 'attr': {'class': 'form-horizontal'} }) }}
+{{ form_widget(form,{ 'attr': {'class': 'form-horizontal col-sm-offset-3 col-sm-6'} }) }}
 {{ form_end(form) }}
 
-{% include "footer.html.twig" %}
 
+{% include "footer.html.twig" %}
 
