--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -1,51 +1,62 @@
 {% include "header.html.twig" %}
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/ui.jqgrid.css') }}"/>
+<link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}"/>
+<link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/ui.jqgrid.css') }}"/>
 
-    <script src="{{ asset('js/jquery-1.11.0.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('js/i18n/grid.locale-en.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('js/jquery.jqGrid.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery-1.11.0.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/i18n/grid.locale-en.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery.jqGrid.js') }}" type="text/javascript"></script>
 
-<table id="grid"></table>
-<div id="pager"></div>
-<script type="text/javascript">
-    $("#grid").jqGrid({
-        url: "{{ path('users') }}",
-        datatype: "xml",
-        mtype: "POST",
-        colNames: ["Id", "Username","Password","E-mail","Username canonical","E-mail canonical",
-            "Enabled", "Salt", "Last login", "Confirmation token", "Password requested at", "Roles"],
-        colModel: [
-            {name: "id", editable: true, edittype: 'text', editrules:{required:true}, stype:"int", sopt:'gt'},
-            {name: "username", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "password", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "email", editable: true, edittype: 'email', editrules:{required:true}},
-            {name: "usernameCanonical", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "emailCanonical", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "enabled", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "salt", editable: true, edittype: 'text', editrules:{required:false}},
-            {name: "lastLogin", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "confirmationToken", editable: true, edittype: 'text', editrules:{required:false}},
-            {name: "passwordRequestedAt", editable: true, edittype: 'text', editrules:{required:true}},
-            {name: "roles", editable: true, edittype: 'text', editrules:{required:true}}
-        ],
-        pager: "#pager",
-        rowNum: 10,
-        rowList: [10, 20, 30],
-        sortname: "id",
-        sortorder: "desc",
-        viewrecords: true,
-        gridview: true,
-        autoencode: true,
-        caption: "User control grid",
-        height: 'auto',
-        cellEdit: true,
-        cellsubmit: 'remote',
-        cellurl: "{{ path('users_edit') }}"
-    });
-    jQuery("#grid").jqGrid('filterToolbar');
-    jQuery("#grid").remapColumns([0,1,4,2,3,5,6,7,8,9,10,11],true,false);
-</script>
+<div class="container-fluid">
+    <div class="row">
+        <table id="grid"></table>
+        <div id="pager"></div>
+        <script type="text/javascript">
+            $("#grid").jqGrid({
+                url: "{{ path('users') }}",
+                datatype: "xml",
+                mtype: "POST",
+                colNames: ["Id", "Username", "Password", "E-mail", "Username canonical", "E-mail canonical",
+                    "Enabled", "Salt", "Last login", "Confirmation token", "Password requested at", "Roles"],
+                colModel: [
+                    {
+                        name: "id",
+                        editable: true,
+                        edittype: 'text',
+                        editrules: {required: true},
+                        stype: "int",
+                        sopt: 'gt'
+                    },
+                    {name: "username", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "password", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "email", editable: true, edittype: 'email', editrules: {required: true}},
+                    {name: "usernameCanonical", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "emailCanonical", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "enabled", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "salt", editable: true, edittype: 'text', editrules: {required: false}},
+                    {name: "lastLogin", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "confirmationToken", editable: true, edittype: 'text', editrules: {required: false}},
+                    {name: "passwordRequestedAt", editable: true, edittype: 'text', editrules: {required: true}},
+                    {name: "roles", editable: true, edittype: 'text', editrules: {required: true}}
+                ],
+                pager: "#pager",
+                rowNum: 10,
+                rowList: [10, 20, 30],
+                sortname: "id",
+                sortorder: "desc",
+                viewrecords: true,
+                gridview: true,
+                autoencode: true,
+                caption: "User control grid",
+                height: 'auto',
+                cellEdit: true,
+                cellsubmit: 'remote',
+                cellurl: "{{ path('users_edit') }}"
+            });
+            jQuery("#grid").jqGrid('filterToolbar');
+            jQuery("#grid").remapColumns([0, 1, 4, 2, 3, 5, 6, 7, 8, 9, 10, 11], true, false);
+        </script>
+    </div>
+</div>
 </body>
 </html>
