--- a/app/Resources/views/catalog.html.twig
+++ b/app/Resources/views/catalog.html.twig
@@ -15,6 +15,9 @@
         <br>
 
             <div class="col-sm-10">
+                <div class="breadcrumbs container-fluid">
+                    {{ breadcrumbs | raw }}
+                </div>
 
                 <div class="container-fluid">
                         {{ items | raw }}
