--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -20,6 +20,10 @@
 </head>
 <body>
 
+<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #AEA8D3 url(http://hello-site.ru//main/images/preloads/tail-spin.svg) center center no-repeat;background-size:41px;}</style>
+<div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
+<script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
@@ -41,15 +45,20 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-right">
+                {% if is_granted("ROLE_MODER") %}
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ path('addProduct') }}">Add Product</a></li>
                         <li><a href="{{ path('addCategory') }}">Add Category</a></li>
+                        {% if is_granted("ROLE_ADMIN") %}
                         <li><a href="{{ path('admin') }}">Admin Page</a></li>
+                        {% endif %}
+                        <li><a href="{{ path('moder') }}">Moder Page</a></li>
 
                     </ul>
                 </li>
+                {% endif %}
                 <li><a href="{{ path('logout') }}">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
