--- a/app/Resources/views/moder.html.twig
+++ b/app/Resources/views/moder.html.twig
@@ -1,10 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>User control grid (admins only)</title>
-
+{% include "header.html.twig" %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/ui.jqgrid.css') }}"/>
 
@@ -13,7 +7,6 @@
     <script src="{{ asset('js/jquery.jqGrid.js') }}" type="text/javascript"></script>
 
 </head>
-<body>
 <table id="grid"></table>
 <div id="pager"></div>
 <script type="text/javascript">
@@ -48,5 +41,4 @@
     jQuery("#grid").jqGrid('filterToolbar');
     jQuery("#grid").remapColumns([0,1,4,2,3,5,6,7,8,9,10,11],true,false);
 </script>
-</body>
-</html>
+{% include "footer.html.twig" %}
