--- a/app/Resources/views/product.html.twig
+++ b/app/Resources/views/product.html.twig
@@ -11,8 +11,12 @@
             </div>
             <div class="col-sm-10">
                 <div class="container-fluid">
+
                     <div class="row">
                         <div class="col-xs-12">
+                            <div class="breadcrumbs container-fluid">
+                                {{ breadcrumbs | raw }}
+                            </div>
                             <h2 class="item-name">{{ item.name }}</h2>
 
                             <div class="container-fluid">
